--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "base-64": "^1.0.0",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.29.0",
     "express": "^4.17.1",
